--- a/Bookshelf/Views/Access.xaml
+++ b/Bookshelf/Views/Access.xaml
@@ -15,13 +15,14 @@
                 HeightRequest="50"
                 HorizontalOptions="Center" />
                     <Label Text="Email" Style="{StaticResource LblEntry}"></Label>
-                    <Entry x:Name="EntEmail" Text="Binding Email" HorizontalOptions="Start" Style="{StaticResource Entry}" />
+                    <Entry x:Name="EntEmail" HorizontalOptions="Start" Style="{StaticResource Entry}"  Text="{Binding Email}" />
+                    
                     <Label Text="Senha" Style="{StaticResource LblEntry}" ></Label>
-                    <Entry x:Name="EntPassword" Text="Binding Password" Style="{StaticResource Entry}"
-                            IsPassword="True" HorizontalOptions="Start" WidthRequest="180" PlaceholderColor="Black" BackgroundColor="White" TextColor="Black" >
-                    </Entry>
-                    <Button x:Name="BtnSignIn" Text="Acessar" Margin="0,10,0,20" Style="{StaticResource MainBtn}"
-                            FontSize="20" ImageSource="right_to_bracket_solid_20_w.png" ContentLayout="Left, 20" Command="{Binding SignInCommand}"  />
+                    <Entry x:Name="EntPassword" Style="{StaticResource Entry}" IsPassword="True" HorizontalOptions="Start" WidthRequest="180" Text="{Binding Password}" />
+
+                    <Button x:Name="BtnSignIn" Text="Acessar" Margin="0,10,0,20" Style="{StaticResource MainBtn}" 
+                            FontSize="20" ImageSource="right_to_bracket_solid_20_w.png" 
+                            ContentLayout="Left, 20" Command="{Binding SignInCommand}"  />
 
                     <Grid HorizontalOptions="FillAndExpand" WidthRequest="292">
                         <Grid.RowDefinitions>
@@ -31,12 +32,12 @@
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition  Width ="*" />
                         </Grid.ColumnDefinitions>
-                        <Button  Text="Cadastrar" x:Name="BtnAddUser"
-                                 Grid.Row="0" Grid.Column="0" Command="{Binding InsertUserCommand}"
-                                 Style="{StaticResource BtnSecondary}" BackgroundColor="#2D4144" FontSize="15" ImageSource="user_plus_solid_15_w.png" ContentLayout="Left, 20" />
-                        <Button Text="Recuperar Senha" x:Name="BtnRecoverPassword"
-                                Grid.Row="1" Grid.Column="0"
-                                 Style="{StaticResource BtnSecondary}"  BackgroundColor="#2D4144" FontSize="15" ImageSource="unlock_solid_15_w.png" ContentLayout="Left, 20"/>
+                        <Button Text="Cadastrar" x:Name="BtnAddUser"
+                                Grid.Row="0" Grid.Column="0" Command="{Binding CreateUserCommand}"
+                                Style="{StaticResource BtnSecondary}" BackgroundColor="#2D4144" FontSize="15" ImageSource="user_plus_solid_15_w.png" ContentLayout="Left, 20" />
+                        <Button Text="Recuperar Senha" x:Name="BtnRecoverPassword" 
+                                Grid.Row="1" Grid.Column="0" Command="{Binding UpdatePasswordCommand}"
+                                Style="{StaticResource BtnSecondary}"  BackgroundColor="#2D4144" FontSize="15" ImageSource="unlock_solid_15_w.png" ContentLayout="Left, 20"/>
                     </Grid>
                 </StackLayout>
             </Frame>
