--- a/Bookshelf/Views/CreateUser.xaml
+++ b/Bookshelf/Views/CreateUser.xaml
@@ -9,7 +9,7 @@
             <Frame Style="{ StaticResource MainFrame }">
                 <StackLayout Style="{StaticResource MainStackLayout}">
 
-                    <Image SemanticProperties.Description="Criar Usuário" HeightRequest="30"  Style="{ StaticResource ImgIcon }" Source="user_plus_solid_30.png" />
+                    <!--<Image SemanticProperties.Description="Criar Usuário" HeightRequest="30" WidthRequest="50"  Style="{ StaticResource ImgIcon }" Source="user_plus_solid_30.png" />-->
 
                     <Label Text="Email" Style="{StaticResource LblEntry}" />
                     <Entry Style="{StaticResource Entry}" x:Name="EntEmail" Text="{Binding Email}" MaxLength="150" Keyboard="Email"  />
@@ -21,7 +21,10 @@
                     <Entry IsPassword="True" Style="{StaticResource Entry}"  x:Name="EntConfSenha"  Text="{Binding ConfirmPassword}" MaxLength="25"/>
 
                     <!---->
-                    <Button x:Name="BtnCreateUser" Text="Cadastrar" Style="{StaticResource BtnPrincipal}" Command="{Binding CreateUserCommand}" IsEnabled="{Binding BtnCreateUserIsEnabled}"/>
+                    <Button x:Name="BtnCreateUser" Text="Cadastrar" Style="{StaticResource MainBtn}" 
+                            ImageSource="user_plus_solid_15_w.png" ContentLayout="Left, 10"
+                            Command="{Binding CreateUserCommand}"
+                            IsEnabled="{Binding BtnCreateUserIsEnabled}" Margin="0,10,0,20" />
                 </StackLayout>
             </Frame>
         </StackLayout>
