--- a/Bookshelf/Views/Access.xaml
+++ b/Bookshelf/Views/Access.xaml
@@ -3,6 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Bookshelf.Views.Access"
              Title="Bookshelf - Gerenciamento de livros"  
+             NavigationPage.HasNavigationBar="False"
              Style="{StaticResource ContentPage}" 
              >
     <ContentPage.Content>
